Fixed H1 visibility issue on homepage for safari browser

--- a/themes/gv_sky/css/sass/_parts-home/featured.sass
+++ b/themes/gv_sky/css/sass/_parts-home/featured.sass
@@ -1,4 +1,5 @@
 .featured
+	background-color: #FFF
 	
 	&-wrap
 		max-width: 1170px
